syntax = "proto3";

message TaskAccepted {
  string task_id = 1;   
  string worker = 2;     
  string timestamp = 3; 
}

